--- a/style.css
+++ b/style.css
@@ -29,5 +29,6 @@ body {
         width: 100%;
         font-size: 32px;
     }
-    
+    <h2 class="titulo-principal">Meus Objetivos do ano<span>_</span></h2>
+
 }
