--- a/style.css
+++ b/style.css
@@ -29,6 +29,17 @@ body {
         width: 100%;
         font-size: 32px;
     }
-    <h2 class="titulo-principal">Meus Objetivos do ano<span>_</span></h2>
-
-}
+    .titulo-principal span {
+        color: var(--verde);
+    }
+    .botao {
+        font-family: "Crakra Petch", sans-serif;
+        background-color: var(--botao-inativo);
+        color: var(--branco);
+        display: flex;
+        justify-content: center;
+        padding: 1em;
+        font-size: 18px;
+        align-items: center;
+        width: 100%;
+        
