--- a/style.css
+++ b/style.css
@@ -52,5 +52,17 @@ body {
             .botoes {
                 display: flex;
             }
+
+.botao:first-child {
+    border-radius: 40px 0 0 0;
+}
+
+.botao: last-child{
+    border-radius: 0 40px 0 0;
+}
             
+.ativo{
+    background-color: var(--botao-ativo);
+    border-bottom: 4px solid var(--verde);
+}
             
