--- a/style.css
+++ b/style.css
@@ -2,8 +2,8 @@
 
 :root {
     --cor-de-fundo: #1E1E1E;
-    --verde: #6FFF57;
-    --branco: #FFFFFF;
+    --verde: #ff57bf;
+    --branco: #ffffff;
     --botao-ativo: #3A375E;
     --botao-inativo: rgba(58, 55, 94, 0.5);
     --texto-fundo: rgba(155, 150, 209, 0.3);
