--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@
     --cor-de-fundo: #1E1E1E;
     --verde: #ff57bf;
     --branco: #ffffff;
-    --botao-ativo: #3A375E;
+    --botao-ativo: #375e51;
     --botao-inativo: rgba(58, 55, 94, 0.5);
     --texto-fundo: rgba(155, 150, 209, 0.3);
 }
