--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Chakra+Petch:wght@400;700&display=swap');
 
 :root {
-    --cor-de-fundo: #be98ff;
+    --cor-de-fundo: #5c0655;
     --verde: #fff457;
     --branco: #FFFFFF;
     --botao-ativo: #74cab7;
