--- a/style.css
+++ b/style.css
@@ -1,105 +1,43 @@
-@import url('https://fonts.googleapis.com/css2?family=Chakra+Petch:wght@400;700&display=swap');
+:root{
+    --cor-fundo: #01080E ;
+    --cor-principal: #0B0D20 ;
+    --cor-secundaria: #212333; 
+    --cor-destaque: #2BDEFD;
+    --cor-texto: #D7F9FF;
 
-:root {
-    --cor-de-fundo: #99e2d8;
-    --verde: #dd1c86;
-    --branco: #FFFFFF;
-    --botao-ativo: #322194;
-    --botao-inativo: rgba(77, 131, 106, 0.5);
-    --texto-fundo: rgba(36, 173, 81, 0.3);
 }
 
 body {
-    background-color: var(--cor-de-fundo);
-    color: var(--branco);
-    font-family: 'Chakra Petch', sans-serif;
-}
-
-.conteudo-principal {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    max-width: 1200px;
-    width: 100%;
-    margin: 0 auto;
-}
-
-.titulo-principal {
-    text-align: left;
-    width: 100%;
-    font-size: 32px;
-}
-
-.titulo-principal span {
-    color: var(--verde);
-}
-
-.botao {
-    font-family: 'Crakra Petch', sans-serif;
-    background-color: var(--botao-inativo);
-    color: var(--branco);
+    background-color: var(--cor-fundo);
+    color: var(--cor-texto);
     display: flex;
     justify-content: center;
-    padding: 1em;
-    font-size: 18px;
     align-items: center;
-    width: 100%;
-    border-bottom: 4px solid var(--botao-ativo);
-    border-left: 2px solid var(--botao-ativo);
-    border-right: 2px solid var(--botao-ativo);
-    border-top: none;
+    min-height: 100vh;
 }
 
-.botoes {
-    display: block;
-}
-
-.botao.ativo {
-    background-color: var(--botao-ativo);
-    border-bottom: 4px solid var(--verde);
-}
-
-.abas-textos {
-    background-color: var(--texto-fundo);
-    padding: 40px;
-    border-radius: 0 0 40px 40px;
-}
-
-.aba-conteudo.ativo {
-    display: block;
-}
-
-.aba-conteudo {
-    display: none;
-}
-
-.aba-conteudo-titulo-principal {
-    font-size: 28px;
+.caixa-principal{
+    background-color: var(--cor-principal);
+    width: 90%;
+    max-width: 600px;
     text-align: center;
+    padding: 20px;
 }
 
-.aba-conteudo-titulo-secundario {
-    font-size: 18px;
-    color: var(--verde);
-    text-transform: uppercase;
-    text-align: center;
+h1{
+    color: var(--cor-destaque);
 }
 
-.botao:first-child {
-    border-radius: 40px 40px 0 0;
+button {
+    background-color: var(--cor-secundaria);
+    color: var(--cor-texto);
+    border: none;
+    border-radius: 15px;
+    padding: 15px;
+    transition: background-color 0.3s;
 }
 
-@media screen and (min-width: 768px) {
-    .botoes {
-        display: flex;
-    }
-
-    .botao:first-child {
-        border-radius: 40px 0 0 0;
-    }
-
-    .botao:last-child {
-        border-radius: 0 40px 0 0;
-    }
+button:hover{
+    background-color: var(--cor-destaque);
+    color: var(--cor-principal);
 }
